# coreclr

./: .gitignore  CMakeLists.txt  build.cmd
CMake/: TargetArch.cmake
CMake/include/: AddPrecompiledHeader.cmake  ConvertToAbsolutePath.cmake  GetCompileDefinitions.cmake  GetIncludeDirectories.cmake  GetVC12Vars.cmake  H2Inc.cmake  PreprocessDefFile.cmake  TargetArch.cmake
CMake/modules/: CMakeASM_JWASMInformation.cmake  CMakeDetermineASM_JWASMCompiler.cmake  FindDIASDK.cmake  FindVS110.cmake  FindVS120.cmake
src/: CMakeLists.txt
src/ToolBox/SOS/Strike/: CMakeLists.txt
src/ToolBox/SOS/diasdk/: CMakeLists.txt
src/binder/: CMakeLists.txt
src/classlibnative/: CMakeLists.txt
src/debug/daccess/: CMakeLists.txt
src/debug/di/: CMakeLists.txt
src/debug/ee/: CMakeLists.txt
src/debug/ee/wks/: CMakeLists.txt
src/dlls/dbgshim/: CmakeLists.txt
src/dlls/mscoree/coreclr/: CMakeLists.txt
src/inc/: CMakeLists.txt  winwrap.h
src/jit/: CMakeLists.txt
src/pal/tools/: gen-buildsys-clang.sh  gen-buildsys-win.bat
src/unwinder/: CMakeLists.txt
src/unwinder/dac/: CMakeLists.txt
src/vm/: CMakeLists.txt  cominterfacemarshaler.cpp
src/vm/dac/: CMakeLists.txt
src/vm/i386/: RedirectedHandledJITCase.asm  asmhelpers.asm  gmsasm.asm
src/vm/wks/: CMakeLists.txt
